Use Specification for lesson page query
Refactors teacher lesson pagination to use `JpaSpecificationExecutor` with dynamic predicates for teacher, status, and scheduled time filters. Sorting is moved into `Pageable` (`scheduledAt` desc with nulls last, then `createdAt` desc) to preserve ordering behavior, and enrollment-count mapping is simplified. The old custom query method is marked deprecated.